Fix background colors for work item "drawer" view
The work item drawer used the overlap background color, but the side
panel does not. This MR adds style overrides for application chrome that
will ensure that the "Read more" button and actrivity feed have correct
background colors.

Changelog: fixed

--- a/app/assets/stylesheets/framework/application-chrome.scss
+++ b/app/assets/stylesheets/framework/application-chrome.scss
@@ -164,6 +164,21 @@
   .panel-content-inner:has(.issue-boards-content) {
     @apply gl-mx-0;
   }
+
+  // work item drawer correct background colors
+  .work-item-drawer {
+    .description-more::before {
+      background: linear-gradient(180deg, transparent 0%, var(--gl-background-color-default) 100%) !important;
+    }
+
+    .show-all-btn {
+      background-color: var(--gl-background-color-default) !important;
+    }
+
+    .timeline-entry:not(.draft-note):last-child::before {
+      @apply gl-bg-default #{!important};
+    }
+  }
 }
 
 /*
